<resources>
    <!-- Auto-Generated Strings -->
    <string name="app_name">Bit</string>
    <string name="app_desc">A fresh, Password Manager!</string>
    <string name="splash_screen_app_name">B i t</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Password Archive</string>
    <string name="title_activity_debug_main">Debug Main</string>

    <!-- Various Strings -->
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="insert_email">Insert email...</string>
    <string name="insert_password">Insert password...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="signup">New user? Signup</string>
    <string name="welcome_dear">Welcome Dear,</string>
    <string name="register">Register</string>
    <string name="please_fill_all_the_fields">Please, fill all the fields.</string>
    <string name="retrieve_the_password">Retrieve it by email!</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="please_insert_valid_email">Please, insert valid email</string>
    <string name="bit_recovery_password">Bit Password Recovery Service</string>
    <string name="please_install_email_client">Please, install on your phone an email client!</string>
    <string name="send_email_three_dot">Send email...</string>
    <string name="debug_recommendation">From GREAT POWER comes GREAT RESPONSIBILITY, so be careful and especially thinks before using some features!</string>
    <string name="no_password_saved">No password saved!</string>
    <string name="filter">Filter</string>
    <string name="Title">Title</string>
    <string name="Password">Password</string>
    <string name="Tag">Tag</string>
    <string name="Icon">Icon</string>
    <string name="insert_title">Insert title...</string>
    <string name="insert_tag">Insert tag...</string>
    <string name="select_icon">Select icon</string>
    <string name="add_password">Add Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saving_data">Saving data...</string>
    <string name="Favorite">Favorite</string>
    <string name="this_account_already_exist">This account already exist!</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="please_add_a_valid_or_registered_email">Please, add valid or registered email...</string>
    <string name="please_check_strings_inserted_and_try_again">Please, check strings inserted and try again...</string>


    <!-- Password Security Level String -->
    <string name="password_is_very_bad">Password is very bad</string> <!-- when return == 0 -->
    <string name="password_is_bad">Password is bad</string> <!-- when return == 1 -->
    <string name="password_is_good">Password is good</string> <!-- when return == 2 -->
    <string name="password_is_very_good">Password is very good</string> <!-- when return == 3 -->
</resources>
