<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.github.p4ndaj.bit.activity.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.015"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textViewWelcomeDear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_dear"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/textViewSignupRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/sign_up_to_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeDear"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/textViewEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignupRegister"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="16dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/insert_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailRegister" />

        <TextView
            android:id="@+id/textViewPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/insert_password"
            android:fontFamily="Roboto"
            android:paddingBottom="16dp"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordRegister"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="28dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/textViewSignInRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_already_have_an_account"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
