<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.github.p4ndaj.bit.activity.ForgotPasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.015"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textViewForgotPasswordTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/textViewRetrieveItByEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/retrieve_the_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordTitle"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewRetrieveItByEmail" />

        <EditText
            android:id="@+id/editTextEmailForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="16dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/insert_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
            style="?borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailForgotPassword"
            android:drawableTint="@color/colorPrimary"
            tools:layout_editor_absoluteX="16dp"
            android:paddingLeft="8dp"/>

        <Button
            android:id="@+id/buttonSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            style="?borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:drawableTint="@color/colorPrimary"
            tools:layout_editor_absoluteX="280dp"
            android:paddingRight="8dp"
            android:layout_marginTop="-10dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailForgotPassword" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>